# HTTP-JS-Server

./: .clang-format  .gitmodules  CMakeLists.txt  Format-Code.ps1  README.md  tsconfig.json  types.d.ts  vcpkg.json
Tests/: basic.mts  prelude.mts  runTests.mts
lib/: prelude.js
src/: CMakeLists.txt  Defines.hpp  main.cpp
src/HTTP/: HTTPHeaders.cpp  HTTPHeaders.hpp  HTTPMethod.cpp  HTTPMethod.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPRequestParser.cpp  HTTPRequestParser.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HTTPStatus.cpp  HTTPStatus.hpp  HTTPStatus.inl
src/Network/: ClientSocket.cpp  ClientSocket.hpp  ListenSocket.cpp  ListenSocket.hpp
src/Scripting/: ScriptEngine.cpp  ScriptEngine.hpp  ScriptLogging.cpp  ScriptLogging.hpp  duk_module_node.cpp  duk_module_node.hpp
